[workspace]
resolver = "2"
members = [
    "crates/cdn-common",
    "crates/cdn-config",
    "crates/cdn-cache",
    "crates/cdn-middleware",
    "crates/cdn-image",
    "crates/cdn-streaming",
    "crates/cdn-proxy",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
rust-version = "1.84"
publish = false

[workspace.lints.clippy]
too_many_arguments = { level = "allow", priority = 1 }

# ── Release profile: optimized for production binary size and speed ──
[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"
opt-level = 3
panic = "abort"

# ── Dev profile: fast incremental builds, optimize heavy deps ──
[profile.dev.package."*"]
opt-level = 1

[workspace.dependencies]
# Pingora
pingora = { version = "0.8", features = ["lb", "cache", "openssl", "proxy"] }

# Async
async-trait = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "signal", "macros"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Metrics
prometheus = "0.14"

# Utilities
once_cell = "1"
arc-swap = "1"
bytes = "1"
http = "1"
regex = "1"
chrono = "0.4"
thiserror = "2"
anyhow = "1"
dashmap = "6"
uuid = { version = "1", features = ["v4"] }

# Configuration & Storage
etcd-client = "0.14"
redis = { version = "0.27", features = ["tokio-comp", "connection-manager", "cluster-async", "streams", "sentinel"] }

# Security
ipnet = { version = "2", features = ["serde"] }
prefix-trie = { version = "0.8", features = ["ipnet"] }
maxminddb = "0.24"
moka = { version = "0.12", features = ["future"] }
crc32fast = "1"
ring = "0.17"
base64 = "0.22"
infer = "0.16"

# SSL/TLS
instant-acme = "0.7"
x509-parser = "0.16"

# Cache
md-5 = "0.10"
reqwest = { version = "0.12", features = ["rustls-tls"] }
quick-xml = "0.37"

# DNS
hickory-resolver = "0.24"

# Compression
flate2 = "1"
brotli = "3.5"
zstd = "0.13"

# Image processing
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp", "avif", "bmp", "tiff"] }
fast_image_resize = "5"

# Allocator
jemallocator = "0.5"

# Internal crates
cdn-common = { path = "crates/cdn-common" }
cdn-config = { path = "crates/cdn-config" }
cdn-cache = { path = "crates/cdn-cache" }
cdn-image = { path = "crates/cdn-image" }
cdn-middleware = { path = "crates/cdn-middleware" }
cdn-streaming = { path = "crates/cdn-streaming" }
