[package]
name = "cdn-cache"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
cdn-common = { workspace = true }
async-trait = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
redis = { workspace = true }
reqwest = { workspace = true }
md-5 = { workspace = true }
ring = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
bytes = { workspace = true }
quick-xml = { workspace = true }
