[package]
name = "cdn-middleware"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
cdn-common = { workspace = true }
async-trait = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ipnet = { workspace = true }
prefix-trie = { workspace = true }
maxminddb = { workspace = true }
moka = { workspace = true }
crc32fast = { workspace = true }
ring = { workspace = true }
base64 = { workspace = true }
regex = { workspace = true }
tokio = { workspace = true }
redis = { workspace = true }
once_cell = { workspace = true }
prometheus = { workspace = true }
infer = { workspace = true }
