[package]
name = "cdn-proxy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "cdn-proxy"
path = "src/main.rs"

[lib]
name = "cdn_proxy"
path = "src/lib.rs"

[dependencies]
cdn-common = { workspace = true }
cdn-config = { workspace = true }
cdn-cache = { workspace = true }
cdn-image = { workspace = true }
cdn-middleware = { workspace = true }
cdn-streaming = { workspace = true }
pingora = { workspace = true }
async-trait = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
once_cell = { workspace = true }
arc-swap = { workspace = true }
prometheus = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
redis = { workspace = true }
moka = { workspace = true }
dashmap = { workspace = true }
uuid = { workspace = true }
instant-acme = { workspace = true }
x509-parser = { workspace = true }
hickory-resolver = { workspace = true }
base64 = { workspace = true }
reqwest = { workspace = true }
ipnet = { workspace = true }
http = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
flate2 = { workspace = true }
brotli = { workspace = true }
zstd = { workspace = true }
bytes = { workspace = true }
foreign-types-shared = "0.1"

[target.'cfg(not(windows))'.dependencies]
jemallocator = { workspace = true }
