[package]
name = "cdn-streaming"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
cdn-common = { workspace = true }
cdn-cache = { workspace = true }
ring = { workspace = true }
base64 = { workspace = true }
md-5 = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
prometheus = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
quick-xml = { workspace = true }
